--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 html{
   margin:0px 10px 0px 10px;
+  overflow: hidden;
 }
 nav > ul{display:flex;
 justify-content: space-around;}
@@ -10,10 +11,17 @@ align-self: center;;
 .green-dome{
   width: 1400px;
   height:700px;
-  background-color: green;
+  background-color: #649549;
   border-bottom-left-radius: 800px;
   border-bottom-right-radius: 800px;
   position:absolute;
-  top:0px;
-  right:-50px;
+  top:-150px;
+  right:-250px;
+  z-index:-1;
+}
+
+.logo{
+width:300px;
+padding: 0px;
+
 }
