--- a/index.css
+++ b/index.css
@@ -1,27 +1,38 @@
-html{
-  margin:0px 10px 0px 10px;
+html {
+  margin: 0px 10px 0px 10px;
   overflow: hidden;
 }
-nav > ul{display:flex;
-justify-content: space-around;}
-nav > ul >li{
-display: flex;
-align-self: center;;
+nav > ul {
+  display: flex;
+  justify-content: space-around;
 }
-.green-dome{
+nav > ul > li {
+  display: flex;
+  align-self: center;
+}
+.green-dome {
   width: 1400px;
-  height:700px;
-  background-color: #649549;
+  height: 700px;
+  background-color: #b8e79c;
   border-bottom-left-radius: 800px;
   border-bottom-right-radius: 800px;
-  position:absolute;
-  top:-150px;
-  right:-250px;
-  z-index:-1;
+  position: absolute;
+  top: -150px;
+  right: -250px;
+  z-index: -1;
 }
 
-.logo{
-width:300px;
-padding: 0px;
-
+.logo {
+  width: 300px;
+  padding: 0px;
+}
+#background {
+  width: 100%;
+  height: 100vh;
+  /* background-color: #649549; */
+  background-color:grey;
+  /* background-color: #eaf3e4; */
+  z-index:-1;
+  position: absolute;
+  top:0px;
 }
