--- a/index.css
+++ b/index.css
@@ -20,6 +20,7 @@ nav > ul > li {
   top: -150px;
   right: -250px;
   z-index: -1;
+  overflow:hidden;
 }
 
 .logo {
@@ -35,4 +36,14 @@ nav > ul > li {
   z-index:-1;
   position: absolute;
   top:0px;
+}
+.food-dome{
+  width: 800px;
+  height: 400px;
+  background-color:blue;
+  position:absolute;
+  bottom:-50px;
+  right:300px;
+  border-top-left-radius: 400px;
+  border-top-right-radius:400px;
 }
