--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
 }
 html {
   margin: 0px 10px 0px 10px;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 nav > ul {
   display: flex;
@@ -38,7 +38,7 @@ nav > ul > li > a{
 }
 #background {
   width: 100%;
-  height: 100vh;
+  height: 700px;
   /* background-color: #649549; */
   background-color:grey;
   /* background-color: #eaf3e4; */
@@ -98,8 +98,9 @@ right:50px
 .intro_paragraph{
   width:400px;
   height:400px;
-  float:left;
+  /* float:left; */
   margin-left:80px;
+  clear:both;
 }
 #order_button{
   height:50px;
@@ -111,6 +112,9 @@ right:50px
 
 #eat_together{
   height:400px;
-  width:100%;
-  background-color: ;
+  width:120%;
+  background-color:white;
+  position:relative;
+  top:100px;
+  
 }
