--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@
 html {
   margin: 0px 10px 0px 10px;
   overflow-x: hidden;
+  width:100%;
 }
 nav > ul {
   display: flex;
@@ -116,5 +117,28 @@ right:50px
   background-color:white;
   position:relative;
   top:100px;
+  /* visibility: hidden; */
   
+}
+
+#eat_together_description{
+  width:400px;
+  float:right;
+  margin-right:300px;
+  padding-right:20px;
+  position:relative;
+  top:50%;
+  transform:translate(-10%,50%);
+  clear:right;
+  clear:left;
+
+}
+.burger_menu{
+  position:relative;
+  top:600px;
+  height:400px;
+  z-index:3;
+}
+.burger_row_1{
+  z-index:3;
 }
