--- a/index.css
+++ b/index.css
@@ -1,10 +1,10 @@
-*{
+* {
   font-family: Poppins;
 }
 html {
   margin: 0px 10px 0px 10px;
   overflow-x: hidden;
-  width:100%;
+  width: 100%;
 }
 nav > ul {
   display: flex;
@@ -15,10 +15,9 @@ nav > ul > li {
   align-self: center;
   text-decoration: none;
 }
-nav > ul > li > a{
-
+nav > ul > li > a {
   text-decoration: none;
-  color:black;
+  color: black;
 }
 .green-dome {
   width: 1400px;
@@ -30,7 +29,7 @@ nav > ul > li > a{
   top: -150px;
   right: -250px;
   z-index: -1;
-  overflow:hidden;
+  overflow: hidden;
 }
 
 .logo {
@@ -41,104 +40,120 @@ nav > ul > li > a{
   width: 100%;
   height: 700px;
   /* background-color: #649549; */
-  background-color:grey;
+  background-color: grey;
   /* background-color: #eaf3e4; */
-  z-index:-1;
+  z-index: -1;
   position: absolute;
-  top:0px;
+  top: 0px;
 }
-.food-dome{
+.food-dome {
   width: 600px;
   height: 330px;
-  background:transparent;
+  background: transparent;
   border: 2px dashed green;
-  position:absolute;
-  bottom:-5px;
-  right:400px;
+  position: absolute;
+  bottom: -5px;
+  right: 400px;
   border-top-left-radius: 600px;
-  border-top-right-radius:600px;
-  opacity:0.6;
+  border-top-right-radius: 600px;
+  opacity: 0.6;
 }
-.food-dome :nth-child(1){
-  position:absolute;
-  bottom:10px;
-  left:-50px;
+.food-dome :nth-child(1) {
+  position: absolute;
+  bottom: 10px;
+  left: -50px;
 }
 
-.food-dome :nth-child(2){
-position:absolute;
-left:50px;
-bottom:200px
-
+.food-dome :nth-child(2) {
+  position: absolute;
+  left: 50px;
+  bottom: 200px;
 }
-.food-dome :nth-child(3){
-
-  position:absolute;
-  top:-40px;
-  left:40%;
+.food-dome :nth-child(3) {
+  position: absolute;
+  top: -40px;
+  left: 40%;
   transform: 50% 50%;
 }
-.food-dome :nth-child(4){
-position:absolute;
-bottom:200px;
-right:50px
-  
+.food-dome :nth-child(4) {
+  position: absolute;
+  bottom: 200px;
+  right: 50px;
 }
-.food-dome :nth-child(5){
-  position:absolute;
-  bottom:30px;
-  right:-50px;
+.food-dome :nth-child(5) {
+  position: absolute;
+  bottom: 30px;
+  right: -50px;
 }
 
-.center-image{
+.center-image {
   position: absolute;
   right: 410px;
   bottom: 200px;
 }
 
-.intro_paragraph{
-  width:400px;
-  height:400px;
+.intro_paragraph {
+  width: 400px;
+  height: 400px;
   /* float:left; */
-  margin-left:80px;
-  clear:both;
+  margin-left: 80px;
+  clear: both;
 }
-#order_button{
-  height:50px;
-  width:200px;
-  border:none;
-  border-radius:30px;
-  background-color: green ;
+#order_button {
+  height: 50px;
+  width: 200px;
+  border: none;
+  border-radius: 30px;
+  background-color: green;
 }
 
-#eat_together{
-  height:400px;
-  width:120%;
-  background-color:white;
-  position:relative;
-  top:100px;
+#eat_together {
+  height: 400px;
+  width: 120%;
+  background-color: white;
+  position: relative;
+  top: 100px;
   /* visibility: hidden; */
-  
 }
 
-#eat_together_description{
+#eat_together_description {
+  width: 400px;
+  float: right;
+  margin-right: 300px;
+  padding-right: 20px;
+  position: relative;
+  top: 50%;
+  transform: translate(-10%, 50%);
+  clear: right;
+  clear: left;
+}
+.burger_menu {
+  position: relative;
+  top: 600px;
+  height: 400px;
+  width: 100%;
+}
+#burger_rows {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  flex-grow: 1;
+}
+#burger_rows > div {
+  /* display:flex; */
+  border-bottom-right-radius: 10px;
+  background-color: blue;
+  border: 2px solid black;
+  margin: auto;
   width:400px;
-  float:right;
-  margin-right:300px;
-  padding-right:20px;
-  position:relative;
-  top:50%;
-  transform:translate(-10%,50%);
-  clear:right;
-  clear:left;
-
+  height:200px
 }
-.burger_menu{
-  position:relative;
-  top:600px;
-  height:400px;
-  z-index:3;
+#burger_rows > div > p {
+  float: right;
 }
-.burger_row_1{
-  z-index:3;
+#burger_rows img {
+  /* position: relative;
+  left:-300px; */
+  transform: translate(-50%, 0%);
+  width: 50%;
 }
