add css rule to make the footer display in flex

--- a/index.css
+++ b/index.css
@@ -213,3 +213,10 @@ form button{
   border-radius: 20px;
   border:none;
 }
+.footer{
+  position:relative;
+  top:1000px;
+  display:flex;
+  justify-content: space-around;
+
+}
