--- a/index.css
+++ b/index.css
@@ -200,9 +200,11 @@ form{
   align-self: center;
 }
 
-form input,form button{
+form input{
   width:400px;
-  height:30px
+  height:30px;
+  border:none;
+  border-radius:20px;
 }
 
 form button{
@@ -219,4 +221,19 @@ form button{
   display:flex;
   justify-content: space-around;
 
+}
+
+.instagram{
+  width:24px
+}
+
+.fourth_column{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#send_button{
+  background-color: green;
+  color:white;
 }
