add css rule to increase the bottom right border radius of hamburger containers.

--- a/index.css
+++ b/index.css
@@ -141,12 +141,12 @@ nav > ul > li > a {
 }
 #burger_rows > div {
   /* display:flex; */
-  border-bottom-right-radius: 10px;
+  border-bottom-right-radius: 80px;
   background-color: blue;
-  border: 2px solid black;
-  margin: auto;
+  margin: 50px;
   width:400px;
   height:200px
+
 }
 #burger_rows > div > p {
   float: right;
@@ -154,7 +154,7 @@ nav > ul > li > a {
 #burger_rows img {
   /* position: relative;
   left:-300px; */
-  transform: translate(-50%, 0%);
+  transform: translate(-50%, -40%);
   width: 50%;
 }
 
