--- a/index.css
+++ b/index.css
@@ -2,9 +2,12 @@
   font-family: Poppins;
 }
 html {
-  margin: 0px 10px 0px 10px;
+  /* margin: 0px 10px 0px 10px; */
   overflow-x: hidden;
   width: 100%;
+}
+body{
+  margin-left: 0px;
 }
 nav > ul {
   display: flex;
@@ -40,11 +43,12 @@ nav > ul > li > a {
   width: 100%;
   height: 700px;
   /* background-color: #649549; */
-  background-color: grey;
+  background-color: #e5e5e5;
   /* background-color: #eaf3e4; */
   z-index: -1;
   position: absolute;
   top: 0px;
+  margin-left: 0px;
 }
 .food-dome {
   width: 600px;
@@ -132,21 +136,23 @@ nav > ul > li > a {
   top: 600px;
   height: 400px;
   width: 100%;
+  margin-left:50px;
 }
 #burger_rows {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   flex-grow: 1;
+  margin-right:80px;
+  margin-left:50px;
 }
 #burger_rows > div {
   /* display:flex; */
   border-bottom-right-radius: 80px;
   background-color: blue;
-  margin: 50px;
-  width:400px;
-  height:200px
-
+  margin: 20px;
+  width: 380px;
+  height: 200px;
 }
 #burger_rows > div > p {
   float: right;
@@ -158,82 +164,79 @@ nav > ul > li > a {
   width: 50%;
 }
 
-.hot_deals{
-
+.hot_deals {
   position: relative;
-  top:800px;
+  top: 800px;
 }
-.hot_deals > h1{
-text-align: center;
+.hot_deals > h1 {
+  text-align: center;
 }
-.burger_text{
-  float:right;
-  width:500px;
-  transform: translate(-50%,100%);
+.burger_text {
+  float: right;
+  width: 500px;
+  transform: translate(-50%, 100%);
 }
-.juice{
-  transform: translate(30%,0%);
+.juice {
+  transform: translate(30%, 0%);
 }
-.vegan_burger{
-  position:relative;
-  right:400px;
-  transform: translate(30%,15%);
-
-}
-
-.contact_us{
+.vegan_burger {
   position: relative;
-  top:900px;
-  text-align:center;
-  display:flex;
+  right: 400px;
+  transform: translate(30%, 15%);
+}
+
+.contact_us {
+  position: relative;
+  top: 900px;
+  text-align: center;
+  display: flex;
   flex-direction: column;
 }
 
-.contact_us p{
-  width:300px;
+.contact_us p {
+  width: 300px;
   align-self: center;
   text-align: center;
 }
-form{
-  display:flex;
+form {
+  display: flex;
   flex-direction: column;
   align-self: center;
 }
 
-form input{
-  width:400px;
-  height:30px;
-  border:none;
-  border-radius:20px;
+form input {
+  width: 400px;
+  height: 30px;
+  border: none;
+  border-radius: 20px;
 }
 
-form button{
-  margin-top:10px;
-  width:200px;
-  height:30px;
+form button {
+  margin-top: 10px;
+  width: 200px;
+  height: 30px;
   align-self: center;
   border-radius: 20px;
-  border:none;
+  border: none;
 }
-.footer{
-  position:relative;
-  top:1000px;
-  display:flex;
+.footer {
+  position: relative;
+  top: 1000px;
+  display: flex;
   justify-content: space-around;
-
 }
 
-.instagram{
-  width:24px
+.instagram {
+  width: 24px;
 }
 
-.fourth_column{
+.fourth_column {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
-#send_button{
+#send_button {
   background-color: green;
-  color:white;
+  color: white;
 }
