update css rule for order now button background color

--- a/index.css
+++ b/index.css
@@ -108,7 +108,7 @@ nav > ul > li > a {
   width: 200px;
   border: none;
   border-radius: 30px;
-  background-color: green;
+  background-color:  #6cb840;
 }
 
 #eat_together {
