--- a/index.css
+++ b/index.css
@@ -114,7 +114,7 @@ nav > ul > li > a {
 #eat_together {
   height: 400px;
   width: 120%;
-  background-color: white;
+  background-color:#ffffff;
   position: relative;
   top: 100px;
   /* visibility: hidden; */
@@ -134,9 +134,11 @@ nav > ul > li > a {
 .burger_menu {
   position: relative;
   top: 600px;
-  height: 400px;
+  height: 600px;
   width: 100%;
   margin-left:50px;
+  margin-right:500px;
+  background-color: #eaf3e4;
 }
 #burger_rows {
   display: flex;
@@ -145,6 +147,7 @@ nav > ul > li > a {
   flex-grow: 1;
   margin-right:80px;
   margin-left:50px;
+  padding:20px;
 }
 #burger_rows > div {
   /* display:flex; */
