--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Poppins");
 * {
   font-family: Poppins;
 }
@@ -132,13 +133,17 @@ nav > ul > li > a {
   clear: left;
 }
 .burger_menu {
+  padding:20px;
   position: relative;
   top: 600px;
   height: 600px;
   width: 100%;
   margin-left:50px;
-  margin-right:500px;
+  margin-right:50px;
   background-color: #eaf3e4;
+}
+.burger_menu > h1{
+  text-align: center;
 }
 #burger_rows {
   display: flex;
@@ -152,7 +157,7 @@ nav > ul > li > a {
 #burger_rows > div {
   /* display:flex; */
   border-bottom-right-radius: 80px;
-  background-color: blue;
+  background-color:#ffffff;
   margin: 20px;
   width: 380px;
   height: 200px;
